<?xml version="1.0" encoding="utf-8"?>
<resources>

    <string name="app_name">BayMax</string>
    <string name="hello_world">Hello world!</string>
    <string name="action_settings">Settings</string>
    <string name="title_activity_main">MainActivity</string>
    <string name="menu_name">With BayMax</string>
    
    <string name="title_activity_water">WaterActivity</string>
    <string name="water">喝水</string>
    <string name="number_water">0</string>
    <string name="goal_text">目标饮水量:  </string>
    <string name="goal_number">8杯</string>
    <string name="finish_text">目标完成度: </string>
    <string name="finish">0%</string>
    <string name="number1">1</string>
    <string name="number2">2</string>
    <string name="number3">3</string>
    <string name="number4">4</string>
    <string name="number5">5</string>
    <string name="number6">6</string>
    <string name="number7">7</string>
    <string name="number8">8</string>
    
    <string name="title_activity_seat">SeatActivity</string>
    <string name="title_activity_m">MActivity</string>
    <string name="title_activity_medicine">MedicineActivity</string>
    <string name="title_activity_weather">WeatherActivity</string>
    <string name="seat">久坐提醒</string>
	<string name="warm_time">固定时间提醒</string>
	<string name="hour">时</string>
	<string name="minute">分</string>
	<string name="second">秒</string>
	<string name="sure">确定</string>
	
	<string name="medicine">吃药提醒</string>
	<string name="medicine_name">药品名称</string>
	<string name="medicine_time">吃药时间</string>
    
</resources>
