<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
  >

    <TextView
       android:layout_width="fill_parent"
       android:layout_height="50dp"
        android:background="#ff0099FF"
        android:textSize="25sp"
        android:gravity="center"
        android:text="@string/water"
       />

    <LinearLayout
        android:layout_width="fill_parent"
        android:gravity="center"
        android:layout_height="100dp" >

        <Button
            android:id="@+id/left"
            android:layout_width="wrap_content"
            android:layout_height="50dp"
            android:background="@drawable/arrow_left" />

        <TextView
            android:id="@+id/numWater"
            android:layout_width="wrap_content"
            android:layout_height="80dp"
             android:textSize="70sp"
             android:textColor="#00ccff"
            android:text="@string/number_water" />

        <Button
            android:id="@+id/right"
            android:layout_width="wrap_content"
            android:layout_height="50dp"
             android:background="@drawable/arrow_right"/>

    </LinearLayout>

    <TableRow
        android:id="@+id/tableRow1"
        android:layout_width="match_parent"
        android:layout_height="wrap_content" >

        <TextView
            android:id="@+id/target"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_weight="1"
             android:gravity="end"
            android:text="@string/goal_text" />

        <TextView
            android:id="@+id/textView2"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:text="@string/goal_number" />

        <TextView
            android:id="@+id/finishText"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:gravity="end"
            android:layout_weight="1"
            android:text="@string/finish_text" />

        <TextView
            android:id="@+id/finishProgress"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:text="@string/finish" />

    </TableRow>

    <TableLayout
        android:layout_width="fill_parent"
        android:layout_height="fill_parent" >

        <TableRow
            android:id="@+id/Row8"
            android:layout_width="fill_parent"
           android:layout_height="wrap_content" >

            <TextView
                android:id="@+id/num8"
                android:textSize="20sp"
                android:layout_width="wrap_content"
                android:layout_height="50dp"
                android:paddingLeft="10dp"
                android:paddingRight="10dp"
                android:text="@string/number8" />
           
        </TableRow>

        <TableRow
            android:id="@+id/Row7"
            android:layout_width="fill_parent"
            android:layout_height="wrap_content" >
            <TextView
                android:id="@+id/num7"
                android:textSize="20sp"
                android:layout_width="wrap_content"
                android:layout_height="50dp"
                android:paddingLeft="10dp"
                android:paddingRight="10dp"
                android:text="@string/number7" />
        </TableRow>

        <TableRow
            android:id="@+id/Row6"
            android:layout_width="fill_parent"
            android:layout_height="wrap_content" >
            <TextView
                android:id="@+id/num6"
                android:textSize="20sp"
                android:layout_width="wrap_content"
               android:layout_height="50dp"
                android:paddingLeft="10dp"
                android:paddingRight="10dp"
                android:text="@string/number6" />
        </TableRow>
        
        <TableRow
            android:id="@+id/Row5"
            android:layout_width="fill_parent"
           android:layout_height="wrap_content" >
            <TextView
                android:id="@+id/num5"
                android:textSize="20sp"
                android:layout_width="wrap_content"
                android:layout_height="50dp"
                android:paddingLeft="10dp"
                android:paddingRight="10dp"
                android:text="@string/number5" />
        </TableRow>
        
        <TableRow
            android:id="@+id/Row4"
            android:layout_width="fill_parent"
            android:layout_height="wrap_content" >
            <TextView
                android:id="@+id/num4"
                android:textSize="20sp"
                android:layout_width="wrap_content"
                android:layout_height="50dp"
                android:paddingLeft="10dp"
                android:paddingRight="10dp"
                android:text="@string/number4" />
        </TableRow>
        
        <TableRow
            android:id="@+id/Row3"
            android:layout_width="fill_parent"
            android:layout_height="wrap_content" >
            <TextView
                android:id="@+id/num3"
                android:textSize="20sp"
                android:layout_width="wrap_content"
                android:layout_height="50dp"
                android:paddingLeft="10dp"
                android:paddingRight="10dp"
                android:text="@string/number3" />
        </TableRow>
        
        <TableRow
            android:id="@+id/Row2"
            android:layout_width="fill_parent"
           android:layout_height="wrap_content" >
            <TextView
                android:id="@+id/num2"
                android:textSize="20sp"
                android:layout_width="wrap_content"
               android:layout_height="50dp"
                android:paddingLeft="10dp"
                android:paddingRight="10dp"
                android:text="@string/number2" />
        </TableRow>
        
        <TableRow
            android:id="@+id/Row1"
            android:layout_width="fill_parent"
           android:layout_height="wrap_content" >
            <TextView
                android:id="@+id/num1"
                android:textSize="20sp"
                android:layout_width="wrap_content"
                android:layout_height="50dp"
                android:paddingLeft="10dp"
                android:paddingRight="10dp"
                android:text="@string/number1" />
        </TableRow>
    </TableLayout>

</LinearLayout>
