<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
>

    <TextView
       android:layout_width="fill_parent"
       android:layout_height="50dp"
        android:background="#ff0099FF"
        android:textSize="25sp"
        android:gravity="center"
        android:text="@string/seat"
       />

    <AnalogClock 
        android:id="@+id/clock"
        android:layout_width="wrap_content"
        android:layout_height="200dp"
        android:layout_gravity="center_horizontal"
        />
    
    <TextView
       android:layout_width="wrap_content"
       android:layout_height="wrap_content"
        android:background="#FFFFFF"
        android:textSize="15sp"
        android:layout_gravity="center"
        android:text="@string/warm_time"
       />

    <TableLayout 
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="center_horizontal"
        >
    <TableRow
        android:id="@+id/tableRow1"
        android:layout_width="match_parent"
        android:layout_height="wrap_content" >

        <EditText
            android:id="@+id/hour"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:ems="10"
            android:layout_weight="2"
            android:inputType="numberDecimal" >
            <requestFocus />
        </EditText>

        <TextView
            android:id="@+id/textView1"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:text="@string/hour" />

    </TableRow>

    <TableRow
        android:id="@+id/tableRow2"
        android:layout_width="match_parent"
        android:layout_height="wrap_content" >

        <EditText
            android:id="@+id/minute"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:ems="10"
             android:layout_weight="2"
            android:inputType="numberDecimal" />

        <TextView
            android:id="@+id/textView2"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
             android:layout_weight="1"
            android:text="@string/minute" />

    </TableRow>

    <TableRow
        android:id="@+id/tableRow3"
        android:layout_width="match_parent"
        android:layout_height="wrap_content" >

        <EditText
            android:id="@+id/second"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
             android:layout_weight="2"
            android:ems="10"
            android:inputType="numberDecimal" />

        <TextView
            android:id="@+id/textView3"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
             android:layout_weight="1"
            android:text="@string/second" />

    </TableRow>
    </TableLayout >

    <Button
        android:layout_marginTop="15dp"
        android:id="@+id/sure"
        android:layout_width="100dp"
        android:layout_height="wrap_content"
        android:layout_gravity="center"
        android:background="@drawable/button"
        android:text="@string/sure" />

</LinearLayout>
